syntax = "proto3";

package com.road.yishi.proto.active;

message DiscountMallRequestMsg {
  int32 op = 1;
  int32 param1 = 2;
  int32 param2 = 3;
}
